<?xml version="1.0"?>
<package format="2">
  <name>exercise3_1</name>
  <version>0.0.0</version>
  <description>The exercise3_1 package</description>
  <maintainer email="jordi.comellas@uvic.cat">Jordi Comellas Coromina</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/JordiCoCo/exercise3.1_roslaunch.git</url>
  <author email="jordi.comellas@uvic.cat">Jordi Comellas Coromina</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  
  </export>
</package>
